--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,5 @@
 @import './partials/general';
-@import './partials/variables';
-@import './partials/header';
-@import './partials/footer';
+@import'./partials/variables';
+@import'./partials/header';
+@import'./partials/footer';
+@import'./partials/product';
