--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,5 +7,210 @@
 body {
   width: 100%;
   font-family: Open sans-serif;
+ 
+}
+
+.testata {
+  margin: 0 auto;
+  width: 70%;
+  height: 120px;
+}
+
+.logo {
+  float: left;
+  margin-top: 10px;
+  width: 20%;
+}
+/*
+.menu-list {
+  display: flex;
+
+ 
+  
+  justify-content: flex-end;
+  width: 80%;
+}
+*/
+/*
+.menu-list ul li {
+  display: inline-block;
+}
+*/
+
+header .lista {
+  padding: 10px;
+ line-height: 120px;
+  font-size: 15px;
+
+  justify-content: space-between;
+  display: flex;
+
+}
+header .lista a{
+  text-decoration: none;
+
+}
+
+
+.jumbotron {
+  height: 350px;
+  background-position: top;
+  background-size: cover;
+  background-image: url("../images/jumbotron.jpg");
+}
+
+footer {
+  background-color: #0282f9;
+}
+
+/*footer-top*/
+
+.footer-top {
+  margin: 0 auto;
+  width: 70%;
+  
+}
+
+.row {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 200px;
+}
+
+.footer-top img {
+  width: 50px;
+  vertical-align: middle;
+}
+
+/*footer-top*/
+
+/*footer-center*/
+.footer-center {
+  background-image: url("../images/footer-bg.jpg");
+ }
+.row-2 {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+ /* height: 200px;*/
+}
+
+ footer .lista h3 {
+  color: white;
+  padding: 15px 0px;
+  text-transform: uppercase;
+}
+
+ footer .lista {
+  float: left;
+  width: 150px;
+  margin-top: 50px;
+}
+
+ footer .lista li {
+  list-style-type: none;
+}
+
+ footer .lista li a {
+  list-style-type: none;
+  text-decoration: none;
+  color: lightgray;
+  line-height: 20px;
+}
+
+ .footer-img {
+  position: relative;
+  left: 300px;
+  width: 500px;
+  overflow: hidden;
+}
+
+.footer-center img {
+  position: absolute;
+  top: -50px;
+  width: 100%;
+}
+
+/*.footer-center*/
+
+/*footer-bottom*/
+
+.footer-bottom {
+  width: 100%;
+  background-color: #303030;
+}
+
+.btn {
+  padding: 16px 32px;
+  border: 2px solid #0282f9;
+  color: white;
+  text-decoration: none;
+}
+
+.footer-menu {
+  width: 70%;
+  margin: 0 auto;
+  height: 150px;
+  line-height: 150px;
+}
+
+.menu-social a {
+  padding: 10px;
+}
+
+.menu-social span {
+  color: #0282f9;
+  text-transform: uppercase;
+}
+
+.menu-social {
+  float: right;
+}
+
+.footer-bottom .bottone {
+  float: left;
+}
+
+/*.footer-bottom*/
+
+.product {
+  width: 15%;
+  min-height: 250px;
+  padding: 10px;
+}
+
+.product h4 {
+  text-align: center;
+  color: white;
+}
+
+.product img {
+  width: 100%;
+}
+
+main {
+  background-color: black;
+}
+
+.container {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  min-height: 300px;
+  padding: 40px;
+}
+
+#products .bottone {
+  text-align: center;
+  padding: 30px;
+}
+
+#products .btn {
+  padding: 10px 30px;
+  color: white;
+  text-decoration: none;
+  background-color: #0282f9;
 }
 
