--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -16,6 +16,10 @@
     justify-content: flex-end;
     width: 80%;
   }
+  .menu-list ul li{
+display: inline-block;
+  }
+
   .lista {
     padding: 10px;
     line-height: 120px;
@@ -24,8 +28,8 @@
   
   .jumbotron {
    height: 350px;
-    background-image: url('../assets/img/jumbotron.jpg');
-    background-position: top;
+   
+  background-position: top;
   background-size: cover;
   }
   
